换成了vue3、优化了一下打包大小、一些bugfix

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Options</title>
-  <link rel="stylesheet" type="text/css" href="../styles/options.css">
 </head>
 <body>
-    <div id="app">
-        <app-root></app-root>
-    </div>
+    <div id="app"></div>
     <script src="../scripts/options.js"></script>
 </body>
 </html>
