--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Popup</title>
-  <link rel="stylesheet" type="text/css" href="../styles/popup.css">
 </head>
 <body>
-    <div id="app">
-      <app-root></app-root>
-    </div>
+    <div id="app"></div>
     <script src="../scripts/popup.js"></script>
 </body>
 </html>
